refactor: Update TryCatchDirectivesHolderTest to use getFirst() for consistency